--- a/src/main/resources/templates/unprotectedHello.html
+++ b/src/main/resources/templates/unprotectedHello.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>UnprHello</title>
+    <title>Unprotected Hello</title>
 </head>
 <body>
     <h1>Hello! It's not protected page!</h1>
