--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="https://www.thymeleaf.org"
+      lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Root page</title>
 </head>
 <body>
-$END$
+    <h1>Welcome to the Root page!</h1>
+    <p>Here you can...</p>
+    <ul>
+        <li>
+            <a href="/unprotected/hello">Check unprotected hello page</a>
+        </li>
+        <li>
+            <a href="/login">Login in your account</a>
+        </li>
+        <li>
+            <a href="/register">Create a new account</a>
+        </li>
+        <li>
+            <a href="/protected/profile">Check your profile</a>
+        </li>
+        <li>
+            <a href="/logout">Log out</a>
+        </li>
+    </ul>
 </body>
 </html>
