--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,18 +7,16 @@
 </head>
 <body>
 <h1>Please Log In</h1>
-<div th:if="${param.error}">
-    Invalid username and password.</div>
-<div th:if="${param.logout}">
-    You have been logged out.</div>
-<form th:action="@{/myLogin}" method="post">
+<div th:if="${param.error}">Invalid username or password.</div>
+<div th:if="${param.logout}">You have been logged out.</div>
+<form th:action="@{/login}" method="post">
     <div>
         <input type="text" name="username" placeholder="Username"/>
     </div>
     <div>
         <input type="password" name="password" placeholder="Password"/>
     </div>
-    <input type="submit" value="Log in" />
+    <input type="submit" value="Log In" />
 </form>
 </body>
 </html>
